DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
[2.0.0 released - 8.14.2007]===================================================
2007-07-24 aronb    vpr::Library::findSymbol() throws vpr::LibraryException if
                    the library has not been loaded.
2007-07-08 patrick  Debug-enabled code linked against the release runtime on
                    Windows is now named the same as optimized code. The debug
                    DLLs are installed in the "debug" subdirectory.
                    vpr::LibraryLoader no longer looks for plug-ins with the
                    "_g" name variation by default.
                    NEW VERSION: 1.1.49
2007-06-27 patrick  Changed the preprocessor identification of debug versus
                    optimized to look for VPR_DEBUG or JUGGLER_DEBUG instead
                    of _DEBUG (and VPR_OPT or JUGGLER_OPT instead of _OPT).
                    NEW VERSION: 1.1.48
2007-06-26 patrick  Allow user-level code to customize the DSO name extension
                    used to distinguish between build variants through the
                    new function vpr::LibraryLoader::setDSONameExt().
                    NEW VERSION: 1.1.47
2007-05-23 aronb    Changed the default socket statistics collection strategy
                    to NullIOStatsStrategy.
                    NEW VERSION: 1.1.46
2007-05-23 patrick  Cleaned up internal handling of vpr::Interval objects in
                    read/write methods of I/O classes. The public read/write
                    methods in vpr::BlockIO now take vpr::Interval objectcs by
                    const reference.
                    NEW VERSION: 1.1.45
2007-04-05 patrick  Added thread start/exit notification signals. Boost.Signals
                    is now a required dependency.
                    NEW VERSION: 1.1.44
2007-03-03 patrick  Allow callers of vpr::InetAddr::getAllLocalAddrs() to