@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2007-09-06 patrick  Implemented stack trace printing on Mac OS X.
+
 [2.0.0 released - 8.14.2007]===================================================
 2007-07-24 aronb    vpr::Library::findSymbol() throws vpr::LibraryException if
                     the library has not been loaded.
